--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-MY_DEBUG=False
+DEBUG=False
 
-MY_SERVER_HOST=8.130.13.246
+SERVER_HOST=8.130.13.246
 
-MY_REDIS_HOST=127.0.0.1
-MY_REDIS_PORT=6379
-MY_REDIS_PASSWD=enjoy@991
+REDIS_HOST=8.130.13.246
+REDIS_PORT=6379
+REDIS_PASSWD=enjoy.991
 
-MY_MYSQL_HOST=8.130.13.246
-MY_MYSQL_PORT=3306
-MY_MYSQL_USER=root
-MY_MYSQL_PASSWD=enjoy@991
-MY_MYSQL_DB=fst
+MYSQL_HOST=8.130.13.246
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWD=enjoy.991
+MYSQL_DB=fst
 
-MY_ALLOWED_CORS_ORIGINS=http://8.130.13.246,http://localhost:8000
+ALLOWED_CORS_ORIGINS=http://8.130.13.246,http://localhost:8000,*
