--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ pydantic==2.7.1
 redis==5.0.4
 python-multipart==0.0.9
 python-dotenv==1.0.1
+aerich==0.7.2
+aiomysql==0.2.0
+cryptography==42.0.8
+passlib==1.7.4
