--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.110.0
+fastapi==0.111.0
 uvicorn==0.29.0
 starlette==0.37.2
 tortoise_orm==0.20.1
@@ -10,3 +10,6 @@ aerich==0.7.2
 aiomysql==0.2.0
 cryptography==42.0.8
 passlib==1.7.4
+bcrypt==4.0.1
+authx==1.1.3
+itsdangerous==2.2.0
