--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 DEBUG=False
 
-SERVER_HOST=8.130.13.246
+SERVER_HOST=192.168.1.30
 
-REDIS_HOST=8.130.13.246
+REDIS_HOST=192.168.1.30
 REDIS_PORT=6379
-REDIS_PASSWORD=enjoy.1991
+REDIS_PASSWORD=sysadmin
 
-MYSQL_HOST=8.130.13.246
+MYSQL_HOST=192.168.1.30
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=enjoy.1991
-MYSQL_DB=fst
+MYSQL_PASSWORD=sysadmin
+MYSQL_DB=monitor
 
-ALLOWED_CORS_ORIGINS=http://8.130.13.246,http://localhost:8000,*
+ALLOWED_CORS_ORIGINS=http://localhost:8000,*
