--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,47 @@
-fastapi==0.111.0
-uvicorn==0.29.0
-starlette==0.37.2
-tortoise_orm==0.20.1
-pydantic==2.7.1
-redis==5.0.4
-python-multipart==0.0.9
-python-dotenv==1.0.1
-aerich==0.7.2
+aerich==0.8.1
 aiomysql==0.2.0
-cryptography==42.0.8
-passlib==1.7.4
-bcrypt==4.0.1
-authx==1.1.3
+aiosqlite==0.20.0
+annotated-types==0.7.0
+anyio==4.8.0
+async-timeout==5.0.1
+asyncclick==8.1.8.0
+authx==1.4.1
+bcrypt==4.2.1
+cffi==1.17.1
+click==8.1.8
+colorama==0.4.6
+cryptography==44.0.1
+dictdiffer==0.9.0
+dnspython==2.7.0
+ecdsa==0.19.0
+email_validator==2.2.0
+exceptiongroup==1.2.2
+fastapi==0.115.8
+h11==0.14.0
+idna==3.10
+iso8601==2.1.0
 itsdangerous==2.2.0
-memoization=0.4.0
+memoization==0.4.0
+passlib==1.7.4
+pyasn1==0.4.8
+pycparser==2.22
+pydantic==2.8.2
+pydantic-settings==2.8.0
+pydantic_core==2.20.1
+PyJWT==2.10.1
+PyMySQL==1.1.1
+pypika-tortoise==0.5.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.4.0
+python-multipart==0.0.20
+pytz==2024.2
+redis==5.2.1
+rsa==4.9
+six==1.17.0
+sniffio==1.3.1
+starlette==0.45.3
+tomli==2.2.1
+tortoise-orm==0.24.1
+typing_extensions==4.12.2
+uvicorn==0.34.0
