--- a/.env
+++ b/.env
@@ -1,15 +1,13 @@
 DEBUG=False
 
-SERVER_HOST=192.168.1.30
+SERVER_HOST=127.0.0.1
 
-REDIS_HOST=192.168.1.30
+REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
-REDIS_PASSWORD=sysadmin
+REDIS_PASSWORD=Mjolnir
 
-MYSQL_HOST=192.168.1.30
+MYSQL_HOST=192.168.1.4
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=sysadmin
+MYSQL_PASSWORD=Mjolnir
 MYSQL_DB=monitor
-
-ALLOWED_CORS_ORIGINS=http://localhost:8000,*
