--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 [tool.aerich]
-tortoise_orm = "app.settings.TORTOISE_ORM"
+tortoise_orm = "app.config.TORTOISE_ORM"
 location = "./migrations"
 src_folder = "./."
