--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ anyio==4.8.0
 async-timeout==5.0.1
 asyncclick==8.1.8.0
 authx==1.4.1
-bcrypt==4.2.1
+bcrypt==4.0.1
 cffi==1.17.1
 click==8.1.8
 colorama==0.4.6
@@ -45,3 +45,8 @@ tomli==2.2.1
 tortoise-orm==0.24.1
 typing_extensions==4.12.2
 uvicorn==0.34.0
+tomlkit==0.13.2
+gmssl-python==2.2.2
+pycryptodome==3.21.0
+crypto==1.4.1
+Celery==5.4.0
