--- a/config/.env
+++ b/config/.env
@@ -6,8 +6,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=Mjolnir
 
-MYSQL_HOST=192.168.1.4
+MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=Mjolnir
+MYSQL_PASSWORD=sysadmin
 MYSQL_DB=monitor
